--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,39 @@
   --windows: #333333;
   --moon-sun: #ffe680ff;
   --floor: #dda0dd;
+
+  /*Taken from https://utopia.fyi/space/calculator/?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,&g=s,l,xl,12*/
+
+  --space-3xs: clamp(0.31rem, calc(0.31rem + 0.00vw), 0.31rem);
+  --space-2xs: clamp(0.56rem, calc(0.54rem + 0.11vw), 0.63rem);
+  --space-xs: clamp(0.88rem, calc(0.85rem + 0.11vw), 0.94rem);
+  --space-s: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+  --space-m: clamp(1.69rem, calc(1.62rem + 0.33vw), 1.88rem);
+  --space-l: clamp(2.25rem, calc(2.16rem + 0.43vw), 2.50rem);
+  --space-xl: clamp(3.38rem, calc(3.24rem + 0.65vw), 3.75rem);
+  --space-2xl: clamp(4.50rem, calc(4.33rem + 0.87vw), 5.00rem);
+  --space-3xl: clamp(6.75rem, calc(6.49rem + 1.30vw), 7.50rem);
+
+  /* One-up pairs */
+  --space-3xs-2xs: clamp(0.31rem, calc(0.20rem + 0.54vw), 0.63rem);
+  --space-2xs-xs: clamp(0.56rem, calc(0.43rem + 0.65vw), 0.94rem);
+  --space-xs-s: clamp(0.88rem, calc(0.74rem + 0.65vw), 1.25rem);
+  --space-s-m: clamp(1.13rem, calc(0.86rem + 1.30vw), 1.88rem);
+  --space-m-l: clamp(1.69rem, calc(1.40rem + 1.41vw), 2.50rem);
+  --space-l-xl: clamp(2.25rem, calc(1.73rem + 2.61vw), 3.75rem);
+  --space-xl-2xl: clamp(3.38rem, calc(2.81rem + 2.83vw), 5.00rem);
+  --space-2xl-3xl: clamp(4.50rem, calc(3.46rem + 5.22vw), 7.50rem);
+
+  /*Taken from https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,&g=s,l,xl,12*/
+
+  --font--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem);
+  --font--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem);
+  --font-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+  --font-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
+  --font-2: clamp(1.62rem, calc(1.50rem + 0.58vw), 1.95rem);
+  --font-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
+  --font-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
+  --font-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
 }
 
 [data-theme="dark"] {
@@ -22,12 +55,12 @@
 
 html {
   font-family: "Reenie Beanie", cursive;
-  font-size: calc(1em + 0.5vw);
+  font-size: var(--font-0);
   color: var(--font-color);
   line-height: 1.5;
   background: var(--bg-color);
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: var(--space-2xl-3xl);
+  padding-right:  var(--space-2xl-3xl);
 }
 * + * {
   margin-top: 1.5rem;
@@ -38,6 +71,7 @@ h3,
 h4 {
   font-family: "Cabin Sketch", cursive;
   line-height: 1.1;
+  font-size: var(--font-2);
 }
 nav ul {
   list-style: none;
@@ -58,15 +92,7 @@ nav li:first-child {
 }
 svg {
   width: 100%;
-}
-.hero {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.hero :last-child {
-  max-width: 20rem;
+  height: 350px
 }
 .windows {
   fill: var(--windows);
@@ -130,4 +156,10 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.grid {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
 }
